// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderLogo  /> Snapshot one 1`] = `
<div
  className="b-header__logo-wrap"
>
  <h1
    className="b-header__logo-text"
  >
    Filmzilla
  </h1>
</div>
`;

exports[`<HeaderLogo  /> Snapshot two 1`] = `
<div
  className="b-header__logo-wrap"
>
  <h1
    className="b-header__logo-text"
  >
    Filmzilla
  </h1>
  <a
    className="b-header__logo-link"
    href="/filmzilla"
    onClick={[Function]}
  >
    search
  </a>
</div>
`;
